--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,7 +1,26 @@
+.menu.borderless.topmenu {
+  box-shadow: none;
+  border: none;
+  background-color: #e7e7e7;
+}
+
+.menu.borderless.midmenu {
+  box-shadow: none;
+  border: none;
+}
+
 .black-background {
   background-color: #323232;
   color: whitesmoke;
   height: 200px;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+.colorblocktop {
+  padding-top: 20px;
+}
+
+h2 {
+  color: whitesmoke;
 }
